gatekeeper/templates/k8srequiredownerlabel.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredownerlabel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredOwnerLabel
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredownerlabel

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels.owner
          msg := "workload must have metadata.labels.owner"
        }
